# deepresearch

./: .gitignore  GEMINI.md  LICENSE  README.md  config.py  context_manager.py  graph.py  main.py  nodes.py  pyproject.toml  telemetry.py  tools.py
.github/: copilot-instructions.md
config/: config.toml
config/prompts/evaluator/: human.j2  system.j2
config/prompts/extractor/: format.j2  human.j2  system.j2
config/prompts/planner/: format.j2  human.j2
config/prompts/synthesizer/: format.j2  human.j2  system.j2
deepresearch/: __init__.py  config.py  context_manager.py  graph.py  main.py  nodes.py  observability.py  output_utils.py  prompting.py  runtime.py  state.py  telemetry.py  tools.py
deepresearch/core/: llm.py  payloads.py  utils.py
deepresearch/core/utils/: __init__.py  coverage.py  evidence.py  markdown.py  ranking.py  text.py  url.py
deepresearch/nodes/: __init__.py  auditor.py  base.py  browser.py  context_manager.py  evaluator.py  extractor.py  global_synthesizer.py  meta_planner.py  micro_planner.py  planner.py  source_manager.py  sub_synthesizer.py  synthesizer.py  topic_synthesizer.py
deepresearch/outputs/: discord.py
deepresearch/resources/: config.toml
deepresearch/resources/prompts/auditor/: format.j2  human.j2  system.j2
deepresearch/resources/prompts/evaluator/: format.j2  human.j2  system.j2
deepresearch/resources/prompts/extractor/: format.j2  human.j2  system.j2
deepresearch/resources/prompts/global_synthesizer/: human.j2  system.j2
deepresearch/resources/prompts/meta_planner/: format.j2  human.j2  system.j2
deepresearch/resources/prompts/micro_planner/: format.j2  human.j2  system.j2
deepresearch/resources/prompts/planner/: format.j2  human.j2  system.j2
deepresearch/resources/prompts/repair/: human.j2  system.j2
deepresearch/resources/prompts/sub_synthesizer/: format.j2  human.j2  system.j2
deepresearch/resources/prompts/synthesizer/: human.j2  system.j2
deepresearch/resources/prompts/topic_synthesizer/: human.j2  system.j2
deepresearch/subagents/: __init__.py  deterministic.py  discord.py  llm.py
deepresearch/tools/: __init__.py  _helpers.py  duckduckgo.py  lightpanda.py  tavily.py
docs/: index.html  styles.css
skill/deepresearch/: SKILL.md
subagents/: deterministic.py  llm.py
tests/: __init__.py  conftest.py  test_config_loading.py  test_context_manager.py  test_deterministic.py  test_discord.py  test_graph_end_to_end.py  test_llm_normalization.py  test_llm_prompts.py  test_llm_workers.py  test_main.py  test_observability.py  test_output_utils.py  test_state.py  test_telemetry.py  test_tools.py
