[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepresearch"
version = "0.1.0"
description = "Auditable deep research pipeline with LangGraph, Ollama, and Lightpanda"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "docker>=7.1.0",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.75",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.6.7",
    "pydantic>=2.11.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]

[project.scripts]
deepresearch = "main:cli"

[tool.setuptools]
py-modules = [
    "config",
    "context_manager",
    "graph",
    "main",
    "nodes",
    "state",
    "telemetry",
    "tools",
]
packages = ["subagents"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
