[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepresearch"
version = "0.6.0"
description = "Auditable deep research pipeline with LangGraph, Ollama, and Tavily"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=0.3.27",
    "langchain-core>=0.3.75",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.6.7",
    "langsmith>=0.7.22",
    "pydantic>=2.11.7",
    "markdown>=3.7",
    "weasyprint>=64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
deepresearch = "deepresearch.main:cli"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["deepresearch*"]

[tool.setuptools.package-data]
"deepresearch.resources" = ["*.toml", "**/*.j2"]
"deepresearch" = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external services",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "BLE",  # flake8-blind-except
    "UP",   # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["deepresearch"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = "(^build/|/build/)"

[[tool.mypy.overrides]]
module = ["markdown"]
ignore_missing_imports = true

